[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trusty_redteam"
version = "0.0.1"
description = "Universal API for LLM Red Teaming"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "pyyaml>=6.0.1",
    "websockets>=12.0",
    "garak==0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[project.scripts]
redteam-server = "trusty_redteam.main:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["trusty_redteam*"]